--- a/pom.xml
+++ b/pom.xml
@@ -431,12 +431,12 @@
                     <message >Maven artifacts for ${project.version}</message>
                     <noJekyll>true</noJekyll>
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory><!--本地jar地址-->
-                    <branch>refs/heads/tx-lcn-${project.version}</branch><!--分支的名称-->
+                    <branch>refs/heads/master</branch><!--分支的名称-->
                     <merge>true</merge>
                     <includes>
                         <include>**/*</include>
                     </includes>
-                    <repositoryName>maven-repository</repositoryName><!--对应github上创建的仓库名称 name-->
+                    <repositoryName>mvn-repo</repositoryName><!--对应github上创建的仓库名称 name-->
                     <repositoryOwner>jinpengxiang</repositoryOwner><!--github 仓库所有者即登录用户名-->
                 </configuration>
                 <executions>
